5.3.10 -> 5.3.11
    - jbj: move multiarch* to mandriva.in.
    - jbj: put "devel(libfoo)" deps under RPM_VENDOR_MANDRIVA.
    - proyvind: merge multiarch-utils from mandriva.
    - proyvind: macros: sync with updated python macros from mandriva.
    - proyvind: rpmfc: add internel dep generator helper for kernel modules.
    - provyind: kmod-deps.sh: add dependency extractor from mandriva.
    - proyvind: rpmds: implement devel(libfoo) symlink dependencies from
	Mandriva, but with proper ELF SONAME checking.
    - jbj: add a --nofsync popt alias (caveat: experimental & risky).
    - jbj: checksig: check explictly for per-item failures after iterating.
    - jbj: build: fix: resurrect %description -l XY yet again.
    - jbj: build: fix: attempt arbitrary '%foo' tag iff '%' is seen.
    - mdawkins: tagged 5.3.10 release in configure.ac

5.3.9 -> 5.3.10
    - proyvind: rpmjs: port to SpiderMonkey 1.8.5 API.
    - mdawkins: updated changelog information for snapshot releases in rpm.spec.in
    - mdawkins: i18n update cs.po da.po de.po es.po fi.po fr.po id.po
		is.po it.po ja.po ko.po nb.po nl.po pa.po pl.po pt.po pt_BR.po 
		ru.po sk.po sl.po sr.po sv.po tr.po uk.po vi.po zh_TW.po
    - proyvind: mandriva: filter overlapping depencies.
    - proyvind: rubygems.rb: add/provide ruby(abi) dependencies for non-gems.
    - proyvind: rpmfc: add classifiers for gstreamer plugins & dep generator.
    - proyvind: use pythoneggs.py for python deps generated by internal generator.
    - proyvind: rpmfc: enable ruby file classifier & internal dep generator.
    - devzero2000: misread the review, repost as the original patch
    - devzero2000: change the order for the _initddir macro assignment
    - proyvind: mandriva: add systemd macros (mdvbz#62741, from Andrey Borzenkov).
    - proyvind: dbconvert: fix conversion to older hash database format
	resulting in "missing" package from rpmdb.
    - devzero2000: add missing merge from HEAD of 